# little-loops

./: .gitignore  .gitignore.backup  .mlc.config.json  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  EXAMPLE-WORKFLOW-ANALYSIS-README.md  EXAMPLE-WORKFLOW-LINKING-IMPROVEMENTS.md  IMPLEMENTATION_SUMMARY.md  PRD-HERMES.md  PRD-Hermes-Integration-v4.md  README.md  affected-components-proposal.md  argobot-init-debug.txt  audit-cli-anything-bootstrap-2026-06-04.md  audit-loop-run-sprint-refine-and-implement-2026-07-18T045753.md  audit-prompt-across-issues-2026-06-13.md  audit-sprint-refine-and-implement-2026-06-28.md  autodev-bug2501-kill-analysis.md  cc-skill-online-resources.md  config-schema.json  create-loop-deep-codebase-debug.txt  diagram-tokens.json  epic-2457-alignment-to-raw-event-transformation-architecture.md  general-task-audit-2026-07-05T215247.md  general-task-audit-2026-07-09T232714.md  git-error-analysis-blender-agents-ll-parallel.md  goal-cluster-dispatch-bugs.md  issue-lifecycle-prompt-simple.txt  ll-auto-debug.txt  ll-sprint-run-debug.txt  mkdocs.yml  permission-ring-diagram-prompt.txt  plugin.json  rn-build-failure-findings.md  rn-implement-audit-2026-06-06.md  rn-implement-audit-2026-06-09.md  rn-implement-audit-2026-06-27.md  rn-implement-debug.txt  rn-refine-timeout-finalize-2026-07-09.md  (+3 more)
scripts/: LICENSE  README.md  autofigure_wrapper.py  config-schema.json  doc_scraper.py  plugin.json  pyproject.toml  verify_learning_citations.sh
scripts/.sprints/: test-sprint-2.yaml  test-sprint-3.yaml  test-sprint-4.yaml
scripts/agents/: codebase-pattern-finder.md  web-search-researcher.md
scripts/brentech_toolkit/: __init__.py  cli.py  config.py  issue_manager.py  issue_parser.py  logger.py  state.py
scripts/brentech_toolkit/parallel/: __init__.py  merge_coordinator.py  orchestrator.py  priority_queue.py  types.py  worker_pool.py
scripts/commands/: audit_architecture.md  audit_docs.md  describe_pr.md  find_dead_code.md  iterate_plan.md  manage_issue.md  prioritize_issues.md  ready_issue.md  scan_codebase.md  verify_issues.md
scripts/little_loops/: __init__.py  ab_writer.py  cache_marking_oracle.py  cli.py  cli_args.py  config-schema.json  config.py  context_window.py  decisions.py  decisions_sync.py  dependency_graph.py  dependency_mapper.py  design_tokens.py  doc_counts.py  events.py  extension.py  file_utils.py  frontmatter.py  generate_schemas.py  git_operations.py  goals_parser.py  history_reader.py  host_runner.py  issue_discovery.py  issue_history.py  issue_lifecycle.py  issue_manager.py  issue_parser.py  issue_progress.py  issue_template.py  learning_tests.py  link_checker.py  logger.py  logo.py  mcp_call.py  output_cleaner.py  output_parsing.py  package_data.py  pii.py  pricing.py  (+22 more)
scripts/little_loops/adapters/: __init__.py  codex.py  core.py  gemini.py  omp.py
scripts/little_loops/analytics/: __init__.py  association.py  variance.py
scripts/little_loops/cli/: __init__.py  action.py  adapt.py  adapt_agents_for_codex.py  adapt_skills_for_codex.py  artifact.py  auto.py  backfill_worker.py  code.py  compact_session.py  config.py  create_extension.py  ctx_stats.py  deps.py  docs.py  doctor.py  generate_skill_descriptions.py  gitignore.py  harness.py  history.py  history_context.py  learning_tests.py  logs.py  loop.py  messages.py  migrate.py  migrate_labels.py  migrate_relationships.py  migrate_status.py  next_id.py  output.py  parallel.py  queue.py  schemas.py  session.py  sprint.py  sync.py  verify_decisions.py  verify_des_audit.py  verify_design_tokens.py  (+3 more)
scripts/little_loops/codequery/: __init__.py  codegraph.py  core.py  fallback.py
scripts/little_loops/compaction/: __init__.py  instant.py  result.py
scripts/little_loops/compression/: __init__.py  heuristic.py
scripts/little_loops/config/: __init__.py  automation.py  cli.py  core.py  features.py  orchestration.py
scripts/little_loops/dependency_mapper/: __init__.py  analysis.py  formatting.py  models.py  operations.py
scripts/little_loops/extensions/: __init__.py  reference_interceptor.py
scripts/little_loops/fsm/: __init__.py  batch_tracker.py  compilers.py  concurrency.py  continuity.py  cost_graph.py  evaluators.py  executor.py  fragments.py  fsm-loop-schema.json  handoff_handler.py  host_guard.py  interpolation.py  persistence.py  policy_rules.py  rate_limit_circuit.py  route_table.py  runners.py  schema.py  signal_detector.py  stall_detector.py  types.py  validation.py
scripts/little_loops/hooks/: __init__.py  __main__.py  edit_batch_nudge.py  install_learning_gate.py  learning_tests_gate.py  post_commit.py  post_tool_use.py  pre_compact.py  pre_compact_handoff.py  pre_tool_use.py  session_start.py  subagent_start.py  subagent_stop.py  sweep_stale_refs.py  types.py  user_prompt_submit.py
scripts/little_loops/init/: __init__.py  cli.py  core.py  detect.py  install_check.py  introspect.py  tui.py  validate.py  writers.py
scripts/little_loops/issue_discovery/: __init__.py  extraction.py  matching.py  search.py
scripts/little_loops/issue_history/: __init__.py  _utils.py  debt.py  (+11 more)
scripts/tests/: __init__.py  bench_opencode_adapter.py  conftest.py  helpers.py  test_ab_writer.py  test_action.py  test_adapt_agents_for_codex.py  test_adapt_skills_for_codex.py  test_adapters.py  test_adversarial_verify_loop.py  test_analytics_association.py  test_analyze_loop_synthesis.py  test_assess_loop_skill.py  test_assistant_messages.py  test_audit_issue_conflicts_skill.py  test_audit_loop_run_skill.py  test_autodev_decision_gate.py  test_autodev_loop.py  test_batch_request_path.py  test_benchmark_fragment.py  test_brainstorm.py  test_bug1649_doc_wiring.py  test_bug1890_init_host_guard.py  test_builtin_loop_interpolation.py  test_builtin_loops.py  test_cache_control.py  test_capture_issue_skill.py  test_check_decisions_yaml_hook.py  test_circuit_breaker_doc_wiring.py  test_claude_code_adapter.py  test_cli.py  test_cli_args.py  test_cli_code.py  test_cli_cost_table.py  test_cli_ctx_stats.py  test_cli_decisions.py  test_cli_deps.py  test_cli_docs.py  test_cli_doctor.py  test_cli_e2e.py  (+345 more)
(+5468 files in other folders)
