[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "little-loops"
version = "1.0.0"
description = "Development workflow toolkit for Claude Code with issue management, code quality commands, and automated processing"
readme = "../README.md"
license = "MIT"
requires-python = ">=3.11"
authors = [
    { name = "little-loops" }
]
keywords = [
    "claude-code",
    "development",
    "workflow",
    "issue-management",
    "automation"
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Build Tools",
    "Topic :: Software Development :: Quality Assurance",
]

[project.scripts]
ll-auto = "little_loops.cli:main_auto"
ll-parallel = "little_loops.cli:main_parallel"

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "ruff>=0.1.0",
    "mypy>=1.0",
]

[tool.hatch.build.targets.wheel]
packages = ["little_loops"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "C4"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_ignores = true
ignore_missing_imports = true
