[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "little-loops"
version = "1.138.0"
description = "Development workflow toolkit for Claude Code with issue management, code quality commands, and automated processing"
readme = "../README.md"
license = "MIT"
requires-python = ">=3.11"
authors = [
    { name = "Brennon Williams", email = "brennon@brenentech.com" }
]
maintainers = [
    { name = "Brennon Williams", email = "brennon@brenentech.com" }
]
keywords = [
    "claude-code",
    "development",
    "workflow",
    "issue-management",
    "automation"
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Build Tools",
    "Topic :: Software Development :: Quality Assurance",
]
dependencies = [
    "pyyaml>=6.0",
    "ruamel.yaml>=0.18",
    "wcwidth>=0.2",
    "questionary>=2.0",
    "rich>=13.0",
]

[project.urls]
Homepage = "https://github.com/BrennonTWilliams/little-loops"
Documentation = "https://docs.little-loops.ai"
Repository = "https://github.com/BrennonTWilliams/little-loops"
"Bug Tracker" = "https://github.com/BrennonTWilliams/little-loops/issues"

[project.scripts]
ll-action = "little_loops.cli:main_action"
ll-artifact = "little_loops.cli:main_artifact"
ll-harness = "little_loops.cli:main_harness"
ll-auto = "little_loops.cli:main_auto"
ll-parallel = "little_loops.cli:main_parallel"
ll-messages = "little_loops.cli:main_messages"
ll-loop = "little_loops.cli:main_loop"
ll-sprint = "little_loops.cli:main_sprint"
ll-sync = "little_loops.cli:main_sync"
ll-workflows = "little_loops.workflow_sequence:main"
ll-history = "little_loops.cli:main_history"
ll-verify-docs = "little_loops.cli:main_verify_docs"
ll-verify-skill-budget = "little_loops.cli:main_verify_skill_budget"
ll-verify-skills = "little_loops.cli:main_verify_skills"
ll-check-links = "little_loops.cli:main_check_links"
ll-create-extension = "little_loops.cli:main_create_extension"
ll-issues = "little_loops.cli:main_issues"
ll-deps = "little_loops.cli:main_deps"
ll-doctor = "little_loops.cli:main_doctor"
ll-gitignore = "little_loops.cli:main_gitignore"
ll-migrate = "little_loops.cli:main_migrate"
ll-migrate-relationships = "little_loops.cli:main_migrate_relationships"
ll-migrate-labels = "little_loops.cli:main_migrate_labels"
ll-migrate-status = "little_loops.cli:main_migrate_status"
ll-logs = "little_loops.cli:main_logs"
ll-session = "little_loops.cli:main_session"
ll-history-context = "little_loops.cli:main_history_context"
ll-ctx-stats = "little_loops.cli:main_ctx_stats"
# internal: dev tooling — regenerates docs/reference/schemas/ after LLEvent changes
ll-generate-schemas = "little_loops.cli:main_generate_schemas"
ll-generate-skill-descriptions = "little_loops.cli:main_generate_skill_descriptions"
ll-adapt = "little_loops.cli:main_adapt"
ll-adapt-skills-for-codex = "little_loops.cli:main_adapt_skills_for_codex"
ll-learning-tests = "little_loops.cli:main_learning_tests"
ll-verify-triggers = "little_loops.cli:main_verify_triggers"
ll-verify-package-data = "little_loops.cli:main_verify_package_data"
ll-verify-design-tokens = "little_loops.cli:main_verify_design_tokens"
ll-adapt-agents-for-codex = "little_loops.cli:main_adapt_agents_for_codex"
ll-init = "little_loops.cli:main_init"
mcp-call = "little_loops.mcp_call:main"

[project.entry-points."little_loops.extensions"]
# Extensions register here for automatic discovery.
# Example: my_ext = "my_package:MyExtension"

[project.entry-points.pytest11]
# ENH-2459: records pytest run results into .ll/history.db (test_run_events).
# Opt out with PYTEST_DISABLE_PLUGIN_LL_HISTORY=1 or `-p no:ll_history`.
ll_history = "little_loops.pytest_history_plugin"

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "pytest-xdist>=3.0",
    "pytest-timeout>=2.0",
    "hypothesis>=6.0",
    "mutmut>=3.0",
    "ruff>=0.1.0",
    "mypy>=1.0",
    "hatch>=1.0",
    "syrupy>=4.0",
    "pre-commit>=3.0",
]
llm = []
otel = [
    "opentelemetry-sdk>=1.20.0",
    "opentelemetry-exporter-otlp-grpc>=1.20.0",
]
webhooks = [
    "httpx>=0.24.0",
]

[tool.hatch.build.targets.wheel]
packages = ["little_loops"]
include = ["little_loops/**", "LICENSE"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "C4"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_ignores = true
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
# Coverage is intentionally NOT in addopts: instrumentation adds ~30-100%
# overhead on every run. For a coverage report use the opt-in invocation:
#   python -m pytest scripts/tests/ --cov=little_loops \
#       --cov-report=term-missing:skip-covered --cov-report=html
# (the [tool.coverage.*] config below still applies when --cov is passed.)
# -n logical runs xdist across logical CPUs (excludes hyperthreads),
# avoiding the per-hyperthread worker overhead that caused 100% CPU + machine
# freeze on multi-core hosts. Override with -n 0 to force serial (e.g. when
# debugging a single test with pdb).
# --timeout=120 is a per-test safety net: any test that hangs past 120s is
# killed and reported as a timeout, freeing the xdist worker slot before it
# can wedge a core indefinitely. Tests with legitimately slow wall-clock
# can opt out via @pytest.mark.timeout(N) per test.
# --timeout-method=thread is explicit because signal-based timeouts race
# with xdist worker process management.
addopts = [
    "--strict-markers",
    "--strict-config",
    "--timeout=120",
    "--timeout-method=thread",
    "-n",
    "logical",
]
markers = [
    "integration: marks tests as integration tests (deselect with '-m \"not integration\"')",
    "slow: marks tests as slow running (deselect with '-m \"not slow\"')",
    "conformance: marks tests as host conformance tests (deselect with '-m \"not conformance\"')",
]

[tool.coverage.run]
source = ["little_loops"]
omit = [
    "*/tests/*",
    "*/__init__.py",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
]
fail_under = 80

[tool.mutmut]
paths_to_mutate = ["little_loops/"]
pytest_add_cli_args_test_selection = ["tests/"]
# -n0 disables xdist for per-mutant runs: each mutant runs a tiny test subset,
# so worker spawn overhead would outweigh any parallelism gain.
pytest_add_cli_args = ["-x", "-q", "-n0"]
